--- a/MRM/MRM.csproj
+++ b/MRM/MRM.csproj
@@ -164,9 +164,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\CampaignFormController.cs" />
+    <Compile Include="Controllers\ChildCampaignController.cs" />
+    <Compile Include="Controllers\MasterCampaignController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MasterDataController.cs" />
+    <Compile Include="Controllers\TacticCampaignController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -215,11 +217,11 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\CampaignForm\MasterCampaign.cshtml" />
-    <Content Include="Views\CampaignForm\ChildCampaign.cshtml" />
-    <Content Include="Views\CampaignForm\TacticCampaign.cshtml" />
+    <Content Include="Views\MasterCampaign\MasterCampaign.cshtml" />
+    <Content Include="Views\ChildCampaign\ChildCampaign.cshtml" />
+    <Content Include="Views\TacticCampaign\TacticCampaign.cshtml" />
     <Content Include="Views\Shared\_LoginLayout.cshtml" />
-    <Content Include="Views\CampaignForm\Index.cshtml" />
+    <Content Include="Views\MasterCampaign\Index.cshtml" />
     <Content Include="Views\MasterData\MasterData.cshtml" />
   </ItemGroup>
   <ItemGroup>
