update model and views

--- a/MRM/MRM.csproj
+++ b/MRM/MRM.csproj
@@ -236,6 +236,12 @@
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MRM.Database\MRM.Database.csproj">
+      <Project>{54664c69-9343-4c44-85f6-dbc2a27d4c63}</Project>
+      <Name>MRM.Database</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
