--- a/MRM/MRM.csproj
+++ b/MRM/MRM.csproj
@@ -172,7 +172,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\MasterCampaign.cs" />
+    <Compile Include="Models\IndustryViewModel.cs" />
+    <Compile Include="Models\MasterCampaignViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -241,6 +242,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MRM.Business\MRM.Business.csproj">
+      <Project>{98c8fa5a-5fbc-4c45-b274-70823a6a3404}</Project>
+      <Name>MRM.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MRM.Database\MRM.Database.csproj">
       <Project>{54664c69-9343-4c44-85f6-dbc2a27d4c63}</Project>
       <Name>MRM.Database</Name>
