--- a/MRM.Business/MRM.Business.csproj
+++ b/MRM.Business/MRM.Business.csproj
@@ -40,8 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IBusinessLineServices.cs" />
+    <Compile Include="Interfaces\IGeographyServices.cs" />
+    <Compile Include="Interfaces\IThemeServices.cs" />
+    <Compile Include="Interfaces\ISegmentServices.cs" />
+    <Compile Include="Interfaces\IBusinessGroupServices.cs" />
     <Compile Include="Interfaces\IIndustryServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BusinessGroupServices.cs" />
+    <Compile Include="Services\BusinessLineServices.cs" />
+    <Compile Include="Services\SegmentServices.cs" />
+    <Compile Include="Services\GeographyServices.cs" />
+    <Compile Include="Services\ThemeServices.cs" />
     <Compile Include="Services\IndustryServices.cs" />
   </ItemGroup>
   <ItemGroup />
