--- a/MRM.Business/MRM.Business.csproj
+++ b/MRM.Business/MRM.Business.csproj
@@ -41,7 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IBusinessLineServices.cs" />
+    <Compile Include="Interfaces\IChildCampaignServices.cs" />
     <Compile Include="Interfaces\IGeographyServices.cs" />
+    <Compile Include="Interfaces\IMasterCampaignServices.cs" />
+    <Compile Include="Interfaces\ITacticCampaignServices.cs" />
     <Compile Include="Interfaces\IThemeServices.cs" />
     <Compile Include="Interfaces\ISegmentServices.cs" />
     <Compile Include="Interfaces\IBusinessGroupServices.cs" />
@@ -49,8 +52,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BusinessGroupServices.cs" />
     <Compile Include="Services\BusinessLineServices.cs" />
+    <Compile Include="Services\ChildCampaignServices.cs" />
+    <Compile Include="Services\MasterCampaignServices.cs" />
     <Compile Include="Services\SegmentServices.cs" />
     <Compile Include="Services\GeographyServices.cs" />
+    <Compile Include="Services\TacticCampaignServices.cs" />
     <Compile Include="Services\ThemeServices.cs" />
     <Compile Include="Services\IndustryServices.cs" />
   </ItemGroup>
