--- a/MRM.Database/App.config
+++ b/MRM.Database/App.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <!--<add name="DBConnectionString" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=MRMDatabse;Integrated Security=True; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
-    <add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMDatabse;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient"/>
+    <add name="DBConnectionString" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=MRMDatabse;Integrated Security=True; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <!--<add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMDatabse;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
