--- a/MRM/Web.config
+++ b/MRM/Web.config
@@ -16,7 +16,7 @@
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
-    <add key="owin:AutomaticAppStartup" value="false" />
+    <add key="owin:AutomaticAppStartup" value="true" /> <!--when use live then value = false otherwise true-->
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ida:ClientId" value="3e1f81db-b04e-48d5-8633-b60f0f7897a7" />
     <add key="ida:Tenant" value="us.hanusoftware.com" />
