--- a/MRM.ViewModel/MRM.ViewModel.csproj
+++ b/MRM.ViewModel/MRM.ViewModel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{98C8FA5A-5FBC-4C45-B274-70823A6A3404}</ProjectGuid>
+    <ProjectGuid>{AB8395EF-CDA7-462D-BC95-916DFDDA8B8F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MRM.Business</RootNamespace>
-    <AssemblyName>MRM.Business</AssemblyName>
+    <RootNamespace>MRM.ViewModel</RootNamespace>
+    <AssemblyName>MRM.ViewModel</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,16 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,38 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\IBusinessLineServices.cs" />
-    <Compile Include="Interfaces\IChildCampaignServices.cs" />
-    <Compile Include="Interfaces\IGeographyServices.cs" />
-    <Compile Include="Interfaces\IMasterCampaignServices.cs" />
-    <Compile Include="Interfaces\ITacticCampaignServices.cs" />
-    <Compile Include="Interfaces\IThemeServices.cs" />
-    <Compile Include="Interfaces\ISegmentServices.cs" />
-    <Compile Include="Interfaces\IBusinessGroupServices.cs" />
-    <Compile Include="Interfaces\IIndustryServices.cs" />
+    <Compile Include="ChildCampaignViewModel.cs" />
+    <Compile Include="MasterCampaignViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\BusinessGroupServices.cs" />
-    <Compile Include="Services\BusinessLineServices.cs" />
-    <Compile Include="Services\ChildCampaignServices.cs" />
-    <Compile Include="Services\MasterCampaignServices.cs" />
-    <Compile Include="Services\SegmentServices.cs" />
-    <Compile Include="Services\GeographyServices.cs" />
-    <Compile Include="Services\TacticCampaignServices.cs" />
-    <Compile Include="Services\ThemeServices.cs" />
-    <Compile Include="Services\IndustryServices.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <Compile Include="TacticCampaignViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MRM.Database\MRM.Database.csproj">
       <Project>{54664c69-9343-4c44-85f6-dbc2a27d4c63}</Project>
       <Name>MRM.Database</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MRM.ViewModel\MRM.ViewModel.csproj">
-      <Project>{ab8395ef-cda7-462d-bc95-916dfdda8b8f}</Project>
-      <Name>MRM.ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
