--- a/MRM/MRM.csproj
+++ b/MRM/MRM.csproj
@@ -227,9 +227,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\TacticCampaignViewModel.cs" />
-    <Compile Include="Models\ChildCampaignViewModel.cs" />
-    <Compile Include="Models\MasterCampaignViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -242,6 +239,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bootstrap-multiselect.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="NLog.config">
@@ -255,6 +253,7 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-2.1.3.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -292,6 +291,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -309,6 +309,10 @@
     <ProjectReference Include="..\MRM.Database\MRM.Database.csproj">
       <Project>{54664c69-9343-4c44-85f6-dbc2a27d4c63}</Project>
       <Name>MRM.Database</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MRM.ViewModel\MRM.ViewModel.csproj">
+      <Project>{ab8395ef-cda7-462d-bc95-916dfdda8b8f}</Project>
+      <Name>MRM.ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
