Code refactor and logic changes by deepak and shailesh

--- a/MRM/MRM.csproj
+++ b/MRM/MRM.csproj
@@ -306,6 +306,7 @@
     <Content Include="Views\MasterList\MasterList.cshtml" />
     <Content Include="Views\ChildList\ChildList.cshtml" />
     <Content Include="Views\TacticList\TacticList.cshtml" />
+    <Content Include="Views\MasterCampaign\MasterCampaignForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
