--- a/MRM.Database/MRM.Database.csproj
+++ b/MRM.Database/MRM.Database.csproj
@@ -74,6 +74,14 @@
     <Compile Include="Migrations\201705311147380_LocalFisrt_310517.Designer.cs">
       <DependentUpon>201705311147380_LocalFisrt_310517.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706261213528_last migration.cs" />
+    <Compile Include="Migrations\201706261213528_last migration.Designer.cs">
+      <DependentUpon>201706261213528_last migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706261334070_last migration1.cs" />
+    <Compile Include="Migrations\201706261334070_last migration1.Designer.cs">
+      <DependentUpon>201706261334070_last migration1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\BusinessGroup.cs" />
     <Compile Include="Model\BusinessLine.cs" />
@@ -85,6 +93,7 @@
     <Compile Include="Model\MRMContext.cs" />
     <Compile Include="Model\Segment.cs" />
     <Compile Include="Model\TacticCampaign.cs" />
+    <Compile Include="Model\TacticType.cs" />
     <Compile Include="Model\Theme.cs" />
     <Compile Include="Model\Vendor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -98,6 +107,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201705311147380_LocalFisrt_310517.resx">
       <DependentUpon>201705311147380_LocalFisrt_310517.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706261213528_last migration.resx">
+      <DependentUpon>201706261213528_last migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706261334070_last migration1.resx">
+      <DependentUpon>201706261334070_last migration1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
