--- a/MRM.ViewModel/MRM.ViewModel.csproj
+++ b/MRM.ViewModel/MRM.ViewModel.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CampaignType.cs" />
     <Compile Include="ChildCampaignViewModel.cs" />
     <Compile Include="MasterCampaignViewModel.cs" />
+    <Compile Include="MasterCampaignViewModelListing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TacticCampaignViewModel.cs" />
   </ItemGroup>
