bug fixed for goal value

--- a/MRM/MRM.csproj
+++ b/MRM/MRM.csproj
@@ -293,6 +293,10 @@
     <Content Include="fonts\fontawesome-webfont.woff2" />
     <Content Include="fonts\FontAwesome.otf" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\Roboto-Bold.ttf" />
+    <Content Include="fonts\Roboto-BoldItalic.ttf" />
+    <Content Include="fonts\Roboto-Italic.ttf" />
+    <Content Include="fonts\Roboto-Regular.ttf" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
