--- a/MRM/Web.config
+++ b/MRM/Web.config
@@ -28,6 +28,7 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <customErrors mode="Off" />
+    <globalization uiCulture="en" culture="en-GB"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
