--- a/MRM/Web.config
+++ b/MRM/Web.config
@@ -8,11 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <!--<add name="DBConnectionString" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=MRMDatabse;Integrated Security=True; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
+  <connectionStrings>    
     <!--<add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMDatabse;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />-->
-    <add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMTestDatabse;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />
-  <!--<add name="DBConnectionString" connectionString="data source=HANULPT-37\SQLEXPRESS;Initial Catalog=mrmtestdatabse;User Id=sa;Password=admin@123;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMTestDatabse;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DBConnectionString" connectionString="Server=tcp:mrmlight.database.windows.net,1433;Initial Catalog=MRMLocalDB;Persist Security Info=False;User ID=mrmadmin;Password=mrm@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30" providerName="System.Data.SqlClient" />-->
+    <add name="DBConnectionString" connectionString="data source=HANULPT-37\SQLEXPRESS;Initial Catalog=mrmtestdatabse;User Id=sa;Password=admin@123;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
